--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -57,17 +57,9 @@ section#blueprint-image {
 }
 
 .blue-arrow {
-  -webkit-border-radius: 5px;
-  border-radius: 5px;
-  display: inline-block;
-  padding: 4px 40px 4px 15px;
+  @include arrow-button;
   background: image-url("arrow_blue_btn.png") no-repeat scroll 96% 9px $blue;
   color: $dark-blue;
-  text-decoration: none;
-  font: 12px 'PT Sans', sans-serif;
-  &:hover {
-    background: image-url("arrow_blue_btn.png") no-repeat scroll 96% 9px white;
-  }
 }
 
 //section {
@@ -237,159 +229,4 @@ section#blueprint-image {
       }
     }
   }
-}
-
-footer {
-  //background: $blue;
-  //padding-bottom: 200px;
-  margin-top: 170px;
-  position: relative;
-  overflow: hidden;
-}
-
-#footer-nav {
-  position: absolute;
-  left: 50%;
-  margin-left: -69px;
-  top: -56px;
-}
-
-section#footer-content {
-  margin-top: 40px;
-  h2 {
-    color: $white;
-    padding-left: 50px;
-    font: bold 18px 'PT Sans', sans-serif;
-    line-height: 32px;
-    background: image-url("blogger.png") 0px 0px no-repeat;
-    text-transform: uppercase;
-    border-bottom: 1px solid $dark-blue;
-    padding-bottom: 20px;
-  }
-}
-
-#blog-return-arrow{
-    @include centered;
-    @include border-top-radius(250px);
-    width: 140px;
-    height: 60px;
-    text-align: center;
-    font-size: 34px;
-    background-color: $blue;
-
-    img {
-      margin-top: 24px;
-    }
-  }
-
-#blog-container {
-  width: 100%;
-  background-color: $blue;
-}
-
-#blog {
-  margin-top: 40px;
-  padding-top: 50px;
-  width: 960px;
-  margin: 0px auto;
-  background-color: $blue;
-
-  .section-title h2{
-    padding-left: 50px;
-    @include pt-sans-header;
-    line-height: 32px;
-    padding-bottom: 20px;
-    color:white;
-    background: url('blog.png') 0px 0px no-repeat;
-    text-transform: uppercase;
-    //margin-top: 40px;
-    border-bottom: 1px $dark-blue solid;
-  }
-
-
-  .section-content {
-    padding-top: 40px;
-    margin-bottom: 40px;
-    .blog-post{
-      width: 480px;
-      float: left;
-      a{
-        text-decoration: none;
-        color: $dark-blue;
-      }
-      a:hover{
-        color: black;
-      }
-      .author{
-        width: 100px;
-        float: left;
-        padding-right: 30px;
-        .author-image{
-          @include centered;
-          text-align: center;
-        }
-        .author-name{
-          @include centered;
-          text-align: center;
-          text-transform: uppercase;
-          padding-bottom: 10px;
-          font-size: 11px;
-        }
-        .author-date{
-          color: $dark-blue;
-          @include centered;
-          text-align: center;
-          font-size: 11px;
-        }
-      }
-      .blog-post-content{
-        width: 315px;
-        padding-left: 164px;
-        .blog-title{
-          @include pt-sans-header;
-          height:auto;
-          padding-bottom: 17px;
-          text-transform: uppercase;
-        }
-        .blog-body{
-          line-height: 30px;
-          color: white;
-        }
-      }
-      .blog-footer{
-        padding-bottom: 0px;
-        margin-top:30px;
-        color: $dark-blue;
-        a.read-more{
-          color: #000000;
-          text-transform: uppercase;
-        }
-        a.read-more:hover{
-          color: $dark-blue;
-        }
-        a.comments{
-          text-transform: uppercase;
-        }
-      }
-    }
-    .blog-post:last-child {
-      border-left: 1px black solid;
-      width: 479px;
-      .author{
-        padding-left: 34px;
-      }
-    }
-  }
-
-    .wrapper {
-
-    }
-
-  h3 {
-    @include pt-sans-header;
-  }
-    #subscribe {
-
-    }
-
 }
