--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -21,32 +21,18 @@
   %ul.divider
     %li
       = image_tag "people.png"
-      %h2
-        COSH
-        %span.blue> X
-        LABS
-        %br>/
-        COMPANY
+      = render :partial => "coshx_blue_x", :locals => {:feature => "COMPANY"}
       %p Meet the team, find out why we're different - and why you should hire us to work your next website or web application project.
       = link_to "About Us", "#", :class => "blue-arrow"
     %li
       = image_tag "services.png"
-      %h2
-        COSH
-        %span.blue> X
-        LABS
-        %br>/
-        SERVICES
+      = render :partial => "coshx_blue_x", :locals => {:feature => "SERVICES"}
       %p Meet the team, find out why we're different - and why you should hire us to work your next website or web application project.
       = link_to "Our Services", "#", :class => "blue-arrow"
     %li
       = image_tag "projects.png"
       %h2
-        COSH
-        %span.blue> X
-        LABS
-        %br>/
-        PROJECTS
+        = render :partial => "coshx_blue_x", :locals => {:feature => "PROJECTS"}
       %p Meet the team, find out why we're different - and why you should hire us to work your next website or web application project.
       = link_to "Our Projects", "#", :class => "blue-arrow"
 
