make the links in the header and footer work (except for contact, as that page doesn't exist yet, we need to decide what will be there)

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -85,12 +85,12 @@
     %span.copy Copyright © 2012 CoshxLabs. All rights reserved
     \•
     %span.links
-      %a{:href => "#"} Home
+      %a{:href => root_path} Home
       |
-      %a{:href => "#"} About
+      %a{:href => about_path} About
       |
-      %a{:href => "#"} Projects
+      %a{:href => portfolio_path} Projects
       |
-      %a{:href => "#"} Services
+      %a{:href => services_path} Services
       |
       %a{:href => "#"} Contact
