make twitter links go to twitter

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -3,7 +3,7 @@
     %a#logo{:href => root_path}
 
     #ribbon
-      = link_to image_tag("banner_twitter.png"), "#"
+      = link_to image_tag("banner_twitter.png"), "https://www.twitter.com/coshxlabs"
       = link_to image_tag("facebook.png"), "#"
 
   %nav.divider#main
