--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -45,7 +45,7 @@
       Check out David Kovsky's blog post on
       %a{:href => "#"} http://coshx.com/blog
       about "Removing Technical Debt"
-    %a.dark-blue-arrow{:href => "#"} Follow us
+    %a.dark-blue-arrow{:href => "https://www.twitter.com/coshxlabs"} Follow us
   %h2.contact-heading ONLY ONE THING LEFT TO DO. CONTACT US USING YOUR PREFERRED METHOD BELOW.
   #contact-details.divider
     .col1
