--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -39,9 +39,7 @@
             %a.comments{:href => "#{polymorphic_url(last_two_posts[1])}#disqus_thread"}
   #footer-tweet.divider
     %p
-      Check out David Kovsky's blog post on
-      %a{:href => "#"} http://coshx.com/blog
-      about "Removing Technical Debt"
+      Currently unable to loading Twitter stream...
     %a.dark-blue-arrow{:href => "https://www.twitter.com/coshxlabs"} Follow us
   %h2.contact-heading ONLY ONE THING LEFT TO DO. CONTACT US USING YOUR PREFERRED METHOD BELOW.
   #contact-details.divider
