add in scrolling JS libs and make bottom at button nicely scroll to top

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,6 +1,6 @@
 %footer.clearfix
   #footer-nav
-    %a{:href => "#"}
+    %a{:href => "#top"}
       = image_tag "footer_top_nav.png"
   %section#footer-content.w960.clearfix
     %h2 Latest blog posts
