various UI fixes to the home page

--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -1,7 +1,7 @@
 @import "compass/css3";
 @import "compass/layout";
 
-$gray: #969595;
+$gray: #B2B2B2;
 $light-gray: #97979b;
 $medium-gray: #525357;
 
