--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -230,3 +230,10 @@ section#blueprint-image {
     }
   }
 }
+
+.white {
+  background-color: $white;
+  &:hover {
+    background-color: $blue;
+  }
+}
