--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -45,7 +45,7 @@
   %p Meet the team, find out why we're different - and why you should hire us to work on your next website or web application project.
 
   = link_to "Contact Us", "#", :class => ["first", "blue-arrow"]
-  = link_to "Request a FREE Quote", "#", :class => "blue-arrow"
+  = link_to "Request a FREE Quote", "#", :class => "blue-arrow white"
 
 %section#featured-projects
   %header.divider
