--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,7 +1,6 @@
 %footer.clearfix
   #footer-nav
-    %a{:href => "#top"}
-      = image_tag "footer_top_nav.png"
+    %a{:id => "top-nav", :href => "#top"}
   %section#footer-content.w960.clearfix
     %h2 Latest blog posts
     #latest-blogs.divider
