add some padding to the points on the blueprint so that the popovers are placed correctly

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -19,6 +19,8 @@
     width: 24px;
     height: 24px;
     background: image-url("add-button.png") no-repeat;
+    padding-top: 12px;
+    padding-left: 3px;
 
     &.point1 {
       left: 155px;
