--- a/app/views/layouts/_fonts.html.haml
+++ b/app/views/layouts/_fonts.html.haml
@@ -1,2 +1,1 @@
-= stylesheet_link_tag "http://fonts.googleapis.com/css?family=Droid+Sans+Mono"
-= stylesheet_link_tag "http://fonts.googleapis.com/css?family=PT+Sans:400,700|Droid+Serif"
+= stylesheet_link_tag "http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Droid+Serif"
