--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -52,7 +52,7 @@
       007-042-1409
       %br/
       %strong Email:
-      %a#contact-email{:href => "#"} info@cosxh.com
+      %a#contact-email{:href => "#"} info@coshx.com
       %br/
     .col2
       %strong Charlottesville
@@ -69,9 +69,7 @@
       %br/
       Suite 280
       %br/
-      Boulder
-      %br/
-      CO 80301
+      Boulder, CO 80301
     .col4
       CONSIDERING COSHX FOR
       %br/
@@ -80,7 +78,7 @@
         Get a proposal
         .arrow
   .footer-bottom
-    %span.copy Copyright © 2012 CoshxLabs. All rights reserved
+    %span.copy Copyright © 2012 Coshx Labs. All rights reserved
     \•
     %span.links
       %a{:href => root_path} Home
