--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -312,10 +312,10 @@ section#blueprint-image {
       }
     }
     li.tendril {
-      background: #1588c3 url(client_logos/tendril.png) no-repeat;
-    }
-    li:hover{
-      background-position: -159px 0px;
+      background: #1588c3 url(client_logos/tendril.png) center center no-repeat;
+      &:hover{
+        background: #1588c3 url(client_logos/tendril_hover.png) center center no-repeat;
+      }
     }
   }
 }
